--- a/sql_notebook.ipynb
+++ b/sql_notebook.ipynb
@@ -16,7 +16,11 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "select * from"
+    "select * from\n",
+    "\n",
+    "\n",
+    "create database test\n",
+    "go"
    ]
   }
  ],
